[tool.poetry]
name = "hpc4neuro"
version = "0.1.0"
description = """\
    A library of Python utilities developed at the Simulation \
    and Data Laboratory Neuroscience, and the High Performance \
    Computing in Neuroscience (HPCNS) division of the Jülich \
    Supercomputing Center."""
authors = ["Forschungszentrum Juelich GmbH"]
license = "MIT"
readme = "README.md"
homepage = "https://gitlab.version.fz-juelich.de/hpc4ns/hpc4neuro"
repository = "https://gitlab.version.fz-juelich.de/hpc4ns/hpc4neuro"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.4.4"
numpy = "^1.16.0"
mpi4py = "^3.0.3"
sphinx = "^2.2.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
